2003-07-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Minolta and Visioneer
	  scanners. Updated Avision, Medion, and UMAX scanners.

2003-07-29  Matthew Duggan <stauff1@users.sourceforge.net>

	* backend/canon_pp.c: Reset globals in sane_exit.

2003-07-28  Andras Major <andras@users.sourceforge.net>

	* doc/descriptions/coolscan2.desc: changed IEEE1394
	  to IEEE-1394 and changed to new status keyword scheme.

2003-07-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.bg.po: Added Bulgarian
	  translation (from Pavel Constantinov 
	  <pavelconstantinov@bigfoot.com>).

2003-07-28  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
	* doc/descriptions/hp5400.desc : changed status to basic

2003-07-28  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
	* backend/hp5400_* : moved constant initialization to sane_init
	  and sane_exit + removed some compilation warnings.

2003-07-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* Makefile.in backend/Makefile.in doc/Makefile.in
	  frontend/Makefile.in include/Makefile.in sanei/Makefile.in: Minor
	  cleanup from the jpeg move. Reverted frontend link order.

2003-07-26  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-usb.c backend/snapscan-usb.h:
	  Changed license to GPL + SANE exception.

2003-07-26  Peter Fales <peter@fales-lorenz.net>
	* sanei/Makefile.in, backend/cderror.h, backend/jinclude.h,
	  backend/dc210.c, backend/dc240.c, backend/ gphoto2.c, 
	  backend/djpeg.c, backend/cdjpeg.h, backend/Makefile.in, configure
	  configure.in, frontend/Makefile.in:  Move jpeg support file 
	  to sanei directofiles to include/sane, and associated 
	  configure changes

2003-07-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei.h include/sane/sanei_codec_ascii.h
	  include/sane/sanei_codec_bin.h include/sane/saneopts.h: Changed
	  license to GPL + SANE exception.