@@ -2,6 +2,8 @@
 
 	* doc/descriptions/unsupported.desc: Added Minolta and Visioneer
 	  scanners. Updated Avision, Medion, and UMAX scanners.
+	* tools/check-usb-chip.c: Added test for Genesys Logig GL660 +
+	  GL646 combination. Added some more messages about what's going on.
 
 2003-07-29  Matthew Duggan <stauff1@users.sourceforge.net>
 
